@@ -21,6 +21,8 @@
  */
 package org.exist.client;
 
+import static org.exist.security.SecurityManager.DBA_USER;
+
 import org.exist.SystemProperties;
 import org.exist.backup.Backup;
 import org.exist.backup.CreateBackupDialog;
@@ -29,7 +31,6 @@ import org.exist.client.security.EditPropertiesDialog;
 import org.exist.client.security.ModeDisplay;
 import org.exist.client.security.UserManagerDialog;
 import org.exist.security.*;
-import org.exist.security.SecurityManager;
 import org.exist.security.internal.aider.SimpleACLPermissionAider;
 import org.exist.storage.serializers.EXistOutputKeys;
 import org.exist.util.FileUtils;
@@ -71,7 +72,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 import java.util.List;
 import java.util.concurrent.*;
@@ -89,6 +89,7 @@ import static org.exist.util.FileUtils.humanSize;
  */
 public class ClientFrame extends JFrame implements WindowFocusListener, KeyListener, ActionListener, MouseListener {
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
     public static final String CUT = Messages.getString("ClientFrame.0"); //$NON-NLS-1$
@@ -608,36 +609,34 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
 
     private synchronized void type(final KeyEvent e) {
         switch (e.getKeyCode()) {
-            case KeyEvent.VK_ENTER:
+            case KeyEvent.VK_ENTER -> {
                 if (e.getID() == KeyEvent.KEY_PRESSED && gotUp) {
                     enter();
                 }
                 e.consume();
-                break;
-            case KeyEvent.VK_HOME:
+            }
+            case KeyEvent.VK_HOME -> {
                 shell.setCaretPosition(commandStart);
                 e.consume();
-                break;
-            case KeyEvent.VK_LEFT:
-            case KeyEvent.VK_DELETE:
-            case KeyEvent.VK_BACK_SPACE:
+            }
+            case KeyEvent.VK_LEFT, KeyEvent.VK_DELETE, KeyEvent.VK_BACK_SPACE -> {
                 if (shell.getCaretPosition() <= commandStart) {
                     e.consume();
                 }
-                break;
-            case KeyEvent.VK_UP:
+            }
+            case KeyEvent.VK_UP -> {
                 if (e.getID() == KeyEvent.KEY_PRESSED) {
                     historyBack();
                 }
                 e.consume();
-                break;
-            case KeyEvent.VK_DOWN:
+            }
+            case KeyEvent.VK_DOWN -> {
                 if (e.getID() == KeyEvent.KEY_PRESSED) {
                     historyForward();
                 }
                 e.consume();
-                break;
-            default:
+            }
+            default -> {
                 if ((e.getModifiers() & (InputEvent.CTRL_MASK
                         | InputEvent.META_MASK | InputEvent.ALT_MASK)) == 0) {
                     if (shell.getCaretPosition() < commandStart) {
@@ -649,7 +648,7 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
                         e.consume();
                     }
                 }
-                break;
+            }
         }
     }
 
@@ -1014,9 +1013,9 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
 
         final CreateBackupDialog dialog = new CreateBackupDialog(
                 properties.getProperty(InteractiveClient.URI, "xmldb:exist://"),
-                properties.getProperty(InteractiveClient.USER, SecurityManager.DBA_USER),
+                properties.getProperty(InteractiveClient.USER, DBA_USER),
                 properties.getProperty(InteractiveClient.PASSWORD, null),
-                Paths.get(preferences.get("directory.backup", System.getProperty("user.home"))),
+                Path.of(preferences.get("directory.backup", System.getProperty("user.home"))),
                 defaultSelectedCollection
         );
 
@@ -1026,10 +1025,10 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
             final String backuptarget = dialog.getBackupTarget();
             final boolean deduplicateBlobs = dialog.getDeduplicateBlobs();
 
-            final Path target = Paths.get(backuptarget).normalize();
+            final Path target = Path.of(backuptarget).normalize();
             if (Files.exists(target)) {
                 final int response = JOptionPane.showConfirmDialog(this,
-                        String.format("%s %s %s", Messages.getString("CreateBackupDialog.6a"), backuptarget, Messages.getString("CreateBackupDialog.6b")),
+                        "%s %s %s".formatted(Messages.getString("CreateBackupDialog.6a"), backuptarget, Messages.getString("CreateBackupDialog.6b")),
                         Messages.getString("CreateBackupDialog.6c"), JOptionPane.YES_NO_OPTION);
 
                 if (response == JOptionPane.YES_OPTION) {
@@ -1043,8 +1042,8 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
 
             try {
                 final Backup backup = new Backup(
-                        properties.getProperty(InteractiveClient.USER, SecurityManager.DBA_USER),
-                        properties.getProperty(InteractiveClient.PASSWORD, null), Paths.get(backuptarget),
+                        properties.getProperty(InteractiveClient.USER, DBA_USER),
+                        properties.getProperty(InteractiveClient.PASSWORD, null), Path.of(backuptarget),
                         XmldbURI.xmldbUriFor(properties.getProperty(InteractiveClient.URI, "xmldb:exist://") + collection),
                         null,
                         deduplicateBlobs
@@ -1080,7 +1079,7 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
                 final String restoreFile = f.toAbsolutePath().toString();
                 final boolean overwriteApps = overwriteCb.isSelected();
                 final GuiRestoreServiceTaskListener listener = new GuiRestoreServiceTaskListener(this);
-                doRestore(listener, properties.getProperty(InteractiveClient.USER, SecurityManager.DBA_USER), properties.getProperty(InteractiveClient.PASSWORD, null), newDbaPass, Paths.get(restoreFile), properties.getProperty(InteractiveClient.URI, "xmldb:exist://"), overwriteApps);
+                doRestore(listener, properties.getProperty(InteractiveClient.USER, DBA_USER), properties.getProperty(InteractiveClient.PASSWORD, null), newDbaPass, Path.of(restoreFile), properties.getProperty(InteractiveClient.URI, "xmldb:exist://"), overwriteApps);
             }
         }
     }
@@ -1111,7 +1110,7 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
 
                 listener.enableDismissDialogButton();
 
-                if (properties.getProperty(InteractiveClient.USER, SecurityManager.DBA_USER).equals(SecurityManager.DBA_USER) && dbaPassword != null) {
+                if (properties.getProperty(InteractiveClient.USER, DBA_USER).equals(DBA_USER) && dbaPassword != null) {
                     properties.setProperty(InteractiveClient.PASSWORD, dbaPassword);
                 }
 
@@ -1136,10 +1135,11 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
 
     public static void repairRepository(Collection collection) throws XMLDBException {
         final EXistXQueryService service = collection.getService(EXistXQueryService.class);
-        service.query("import module namespace repair=\"http://exist-db.org/xquery/repo/repair\"\n" +
-                "at \"resource:org/exist/xquery/modules/expathrepo/repair.xql\";\n" +
-                "repair:clean-all(),\n" +
-                "repair:repair()");
+        service.query("""
+                import module namespace repair="http://exist-db.org/xquery/repo/repair"
+                at "resource:org/exist/xquery/modules/expathrepo/repair.xql";
+                repair:clean-all(),
+                repair:repair()""");
     }
 
     public UserManagementService getUserManagementService() throws XMLDBException {
@@ -1174,7 +1174,7 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
             final JFileChooser chooser = new JFileChooser(preferences.get("directory.last", System.getProperty("user.dir")));
             chooser.setMultiSelectionEnabled(false);
             chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
-            chooser.setSelectedFile(Paths.get(desc.getName().getCollectionPath()).toFile());
+            chooser.setSelectedFile(Path.of(desc.getName().getCollectionPath()).toFile());
             if (chooser.showDialog(this, "Select file for export") == JFileChooser.APPROVE_OPTION) {
                 preferences.put("directory.last", chooser.getCurrentDirectory().getAbsolutePath());
                 final Path file = chooser.getSelectedFile().toPath();
@@ -1190,9 +1190,9 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
                     final Collection collection = client.getCollection();
                     resource = collection
                             .getResource(desc.getName().toString());
-                    if (resource instanceof ExtendedResource) {
+                    if (resource instanceof ExtendedResource extendedResource) {
                         try(final OutputStream os = new BufferedOutputStream(Files.newOutputStream(file))) {
-                            ((ExtendedResource) resource).getContentIntoAStream(os);
+                            extendedResource.getContentIntoAStream(os);
                         }
                     } else {
                         contentSerializer = (SAXSerializer) SerializerPool
@@ -1285,11 +1285,11 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
                     thisCreated = DATE_TIME_FORMATTER.format(res.getCreationTime());
                     thisModified = DATE_TIME_FORMATTER.format(res.getLastModificationTime());
                     thisMimeType = ((EXistResource) res).getMimeType();
-                    if (res instanceof EXistBinaryResource) {
-                        final MessageDigest messageDigest = ((EXistBinaryResource) res).getContentDigest(DigestType.BLAKE_256);
+                    if (res instanceof EXistBinaryResource resource) {
+                        final MessageDigest messageDigest = resource.getContentDigest(DigestType.BLAKE_256);
                         thisMessageDigestType = messageDigest.getDigestType().getCommonNames()[0];
                         thisMessageDigestValue = messageDigest.toHexString();
-                        thisSize = humanSize(((EXistBinaryResource) res).getContentLength());
+                        thisSize = humanSize(resource.getContentLength());
                     } else {
                         thisMessageDigestType = NON_APPLICABLE;
                         thisMessageDigestValue = NON_APPLICABLE;
@@ -1572,6 +1572,7 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
 
     static class ResourceTableModel extends AbstractTableModel {
 
+        @Serial
         private static final long serialVersionUID = 1L;
 
         private final String[] columnNames = new String[]{
@@ -1959,7 +1960,7 @@ public class ClientFrame extends JFrame implements WindowFocusListener, KeyListe
                     files = new ArrayList<>();
                 }
 
-                files.add(Paths.get(new URI(token)));
+                files.add(Path.of(new URI(token)));
             }
 
             return files;
