@@ -458,7 +458,6 @@ public final class Journal implements Closeable {
         try {
             if (currentBuffer.position() > 0) {
                 currentBuffer.flip();
-                final int size = currentBuffer.remaining();
                 while (currentBuffer.hasRemaining()) {
                     channel.write(currentBuffer);
                 }
@@ -781,7 +780,7 @@ public final class Journal implements Closeable {
         if (fileNum < 0) {
             throw new IllegalArgumentException("File Number: " + fileNum + " is out of range (0-" + Short.MAX_VALUE + ")");
         }
-        return String.format("%010x", fileNum) + '.' + LOG_FILE_SUFFIX;
+        return "%010x".formatted(fileNum) + '.' + LOG_FILE_SUFFIX;
     }
 
     private static class RemoveRunnable implements Runnable {
