@@ -34,7 +34,7 @@ import org.xmldb.api.modules.XMLResource;
 
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.junit.Test;
 import static org.junit.Assert.assertNotNull;
@@ -57,14 +57,14 @@ public class BinaryResourceUpdateTest  {
     public void updateBinary() throws XMLDBException, URISyntaxException {
         for (int i = 0; i < REPEAT; i++) {
             BinaryResource binaryResource = testCollection.createResource("test1.xml", BinaryResource.class);
-            binaryResource.setContent(Paths.get(binFile.toURI()));
+            binaryResource.setContent(Path.of(binFile.toURI()));
             testCollection.storeResource(binaryResource);
 
             Resource resource = testCollection.getResource("test1.xml");
             assertNotNull(resource);
 
             XMLResource xmlResource = testCollection.createResource("test2.xml", XMLResource.class);
-            xmlResource.setContent(Paths.get(xmlFile.toURI()));
+            xmlResource.setContent(Path.of(xmlFile.toURI()));
             testCollection.storeResource(xmlResource);
 
             resource = testCollection.getResource("test2.xml");
