@@ -204,37 +204,21 @@ public class RangeIndexWorker implements OrderedValuesIndex, QNamedKeysIndex {
             };
         }
         if (operator == RangeIndex.Operator.NE) {
-            Query eqQuery;
-            switch (type) {
-                case Type.INTEGER:
-                case Type.LONG:
-                case Type.UNSIGNED_LONG:
-                    eqQuery = LongField.newExactQuery(field, ((NumericValue) content).getLong());
-                    break;
-                case Type.INT:
-                case Type.UNSIGNED_INT:
-                case Type.SHORT:
-                case Type.UNSIGNED_SHORT:
-                    eqQuery = IntField.newExactQuery(field, ((NumericValue) content).getInt());
-                    break;
-                case Type.DECIMAL:
-                case Type.DOUBLE:
-                    eqQuery = DoubleField.newExactQuery(field, ((NumericValue) content).getDouble());
-                    break;
-                case Type.FLOAT:
-                    eqQuery = FloatField.newExactQuery(field, (float) ((NumericValue) content).getDouble());
-                    break;
-                case Type.DATE:
-                    eqQuery = LongField.newExactQuery(field, RangeIndexConfigElement.dateToLong((DateValue) content));
-                    break;
-                case Type.TIME:
-                    eqQuery = LongField.newExactQuery(field, RangeIndexConfigElement.timeToLong((TimeValue) content));
-                    break;
-                case Type.DATE_TIME:
-                default:
-                    eqQuery = new TermQuery(new Term(field, RangeIndexConfigElement.convertToBytes(content)));
-                    break;
-            }
+            Query eqQuery = switch (type) {
+                case Type.INTEGER, Type.LONG, Type.UNSIGNED_LONG ->
+                        LongField.newExactQuery(field, ((NumericValue) content).getLong());
+                case Type.INT, Type.UNSIGNED_INT, Type.SHORT, Type.UNSIGNED_SHORT ->
+                        IntField.newExactQuery(field, ((NumericValue) content).getInt());
+                case Type.DECIMAL, Type.DOUBLE ->
+                        DoubleField.newExactQuery(field, ((NumericValue) content).getDouble());
+                case Type.FLOAT ->
+                        FloatField.newExactQuery(field, (float) ((NumericValue) content).getDouble());
+                case Type.DATE ->
+                        LongField.newExactQuery(field, RangeIndexConfigElement.dateToLong((DateValue) content));
+                case Type.TIME ->
+                        LongField.newExactQuery(field, RangeIndexConfigElement.timeToLong((TimeValue) content));
+                default -> new TermQuery(new Term(field, RangeIndexConfigElement.convertToBytes(content)));
+            };
             final BooleanQuery.Builder nqb = new BooleanQuery.Builder();
             nqb.add(new MatchAllDocsQuery(), BooleanClause.Occur.MUST);
             nqb.add(eqQuery, BooleanClause.Occur.MUST_NOT);
@@ -678,7 +662,7 @@ public class RangeIndexWorker implements OrderedValuesIndex, QNamedKeysIndex {
             BooleanQuery query = queryBuilder.build();
             Query qu = query;
             if (query.clauses().size() == 1) {
-                qu = query.clauses().get(0).query();
+                qu = query.clauses().getFirst().query();
             }
             final NodeSet resultSet = new NewArrayNodeSet();
             resultSet.addAll(doQuery(contextId, docs, contextSet, axis, searcher.searcher(), Node.ELEMENT_NODE, qu));
@@ -720,18 +704,23 @@ public class RangeIndexWorker implements OrderedValuesIndex, QNamedKeysIndex {
     private void diagnoseQuery(IndexSearcher searcher, Query query) {
         String field = null;
         String searchTerm = null;
-        if (query instanceof TermQuery tq) {
-            Term t = tq.getTerm();
-            field = t.field();
-            searchTerm = t.text();
-        } else if (query instanceof PrefixQuery pq) {
-            Term t = pq.getPrefix();
-            field = t.field();
-            searchTerm = t.text();
-        } else if (query instanceof WildcardQuery wq) {
-            Term t = wq.getTerm();
-            field = t.field();
-            searchTerm = t.text();
+        switch (query) {
+            case TermQuery tq -> {
+                Term t = tq.getTerm();
+                field = t.field();
+                searchTerm = t.text();
+            }
+            case PrefixQuery pq -> {
+                Term t = pq.getPrefix();
+                field = t.field();
+                searchTerm = t.text();
+            }
+            case WildcardQuery wq -> {
+                Term t = wq.getTerm();
+                field = t.field();
+                searchTerm = t.text();
+            }
+            case null, default -> {}
         }
         if (field == null || FIELD_DOC_ID.equals(field) || FIELD_NODE_ID.equals(field) || FIELD_ID.equals(field) || FIELD_ADDRESS.equals(field)) {
             return;
@@ -932,19 +921,14 @@ public class RangeIndexWorker implements OrderedValuesIndex, QNamedKeysIndex {
         if (analyzer == null) {
             return new BytesRef(content);
         }
-        try {
-            TokenStream stream = analyzer.tokenStream(field, new StringReader(content));
+        try (TokenStream stream = analyzer.tokenStream(field, new StringReader(content))) {
             TermToBytesRefAttribute termAttr = stream.addAttribute(TermToBytesRefAttribute.class);
             BytesRef token = null;
-            try {
-                stream.reset();
-                if (stream.incrementToken()) {
-                    token = BytesRef.deepCopyOf(termAttr.getBytesRef());
-                }
-                stream.end();
-            } finally {
-                stream.close();
+            stream.reset();
+            if (stream.incrementToken()) {
+                token = BytesRef.deepCopyOf(termAttr.getBytesRef());
             }
+            stream.end();
             if (LOG.isDebugEnabled()) {
                 LOG.debug("ANALYZE result token={}", safeBytesRefToDisplay(token));
             }
@@ -1079,8 +1063,8 @@ public class RangeIndexWorker implements OrderedValuesIndex, QNamedKeysIndex {
                             boolean match = configuration.match(path);
                             if (match) {
                                 final TextCollector collector = contentStack.pop();
-                                match = collector instanceof ComplexTextCollector
-                                        ? match && ((ComplexTextCollector)collector).getConfig().matchConditions(element)
+                                match = collector instanceof ComplexTextCollector ctc
+                                        ? match && ctc.getConfig().matchConditions(element)
                                         : match;
                                 if (match) indexText(element, element.getQName(), path, configuration, collector);
                             }
